backend bugs fixed and frontend made better

--- a/frontend/assets/css/main.css
+++ b/frontend/assets/css/main.css
@@ -1,6 +1,7 @@
 @import './fonts.css';
 @import './tailwind.css';
 @import './bgs.css';
+@import './modified/toast.css';
 
 svg {
      display: inline-block;
